<resources>
    <string name="app_name">Scheduled Blocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_from_contact">Add from contact</string>
    <string name="add_manually">Add manually</string>
    <string name="phoneNumberIsEmpty">Cannot add contact. Phone number is empty</string>
    <string name="title_activity_single_contact">Manage blacklist contact </string>
    <string name="title_whitelist_activity_single_contact">Manage whitelist contact</string>
    <string name="call_blocker_activity_name">Blocked calls log</string>
    <string name="preference_dialog_clear_type_key">ClearType</string>
    <string name="outgoing_call_blocked_string">Block outgoing call</string>
    <string name="incoming_call_blocked_string">Block incoming call</string>
    <string name="delte_contact">delte</string>
    <string name="dontBlockString">don\'t block</string>
    <string name="alwaysBlockString">always</string>
    <string name="scheduledBlockString">scheduled</string>
    <string name="addToWhiteList">add to whitelist</string>
    <string name="remvoveFromWhiteList">remove from whitelist</string>
    <string name="incoming_call_label_string">Incoming call</string>
    <string name="outgoing_call_label_string">Outgoing call</string>
    <string name="weekDay_0">Mon</string>
    <string name="weekDay_1">Tue</string>
    <string name="weekDay_2">Wed</string>
    <string name="weekDay_3">Thu</string>
    <string name="weekDay_4">Fri</string>
    <string name="weekDay_5">Sat</string>
    <string name="weekDay_6">Sun</string>
    <string name="scheduledNotSetButtonLabel">not set</string>
    <string name="scheduledClearAllButtonLabel">Clear all</string>
    <string name="pick_time">Pick time</string>
    <string name="add_contact">Add number</string>
    <string name="button_ok_text">Ok</string>
    <string name="button_save_text">Save</string>
    <string name="block_type_data_missing">Error! Some data is missing from dialog.</string>
    <string name="week_day_data_missing">Error! Some data is missing from dialog.</string>
    <string name="button_string_change">change</string>
    <string name="button_cancel_button">Cancel</string>
    <string name="button_clear_button">Clear</string>
    <string name="start_time_is_older_than_end_time">Start time cannot be older than end time</string>
    <string name="end_time_is_earlier_than_end_time">End time cannot be earlier than start time</string>
    <string name="from_text">From:</string>
    <string name="end_text">To:</string>
    <string name="show_log">logs</string>
    <string name="clear_log">clear log</string>
    <string name="clear_contact_log">clear contact log </string>
    <string name="clearAllSchedulesText">clear all</string>
    <string name="newPhoneNumberString">Phone number</string>
    <string name="save_new_number">Save</string>
    <string name="cancel_new_number">Cancel</string>
    <string name="title_activity_add_new_phone">Add new number</string>
    <string name="wrong_phone_number_format">Invalid phone number format</string>
    <string name="nothing_to_save">Cannot save empty string</string>
    <string name="global_categories">General setting</string>
    <string name="global_call_block_settings">General call blocker settings</string>
    <string name="whitelist_settings">Whitelist settings</string>
    <string name="whitelist_settings_summary">Add block exceptions</string>
    <string name="block_all_incoming_string">Block all incoming calls</string>
    <string name="block_all_outgoing_string">Block all outgoing calls</string>
    <string name="block_all_incoming_string_summary">Blocks all incoming calls</string>
    <string name="block_all_outgoing_string_summary">Blocks all outgoing calls</string>
    <string name="incoming_block_category_title_string">Incoming block settings</string>
    <string name="incoming_block_category_summary_string">Reset incoming call settings</string>
    <string name="outgoing_block_category_title_string">Outgoing block settings</string>
    <string name="outgoing_block_category_summary_string">Reset outgoing call settings</string>
    <string name="notification_category_title_string">Notification settings</string>
    <string name="notification_category_summary_string">Enable/disable call block notifications</string>
    <string name="unblock_all_incoming_block_numbers_title">Unblock all \'always block\' numbers</string>
    <string name="unblock_all_incoming_block_numbers_summary">Unblocks all \'always block\' numbers</string>
    <string name="clear_all_incoming_block_schedule_title">Unblock all \'scheduled block\' numbers</string>
    <string name="clear_all_incoming_block_schedule_summary">Unblocks all \'scheduled block\' numbers</string>
    <string name="unblock_all_outgoing_block_numbers_title">Unblock all \'always block\' numbers</string>
    <string name="unblock_all_outgoing_block_numbers_summary">Unblocks all \'always block\' numbers</string>
    <string name="clear_all_outgoing_block_schedule_title">Unblock all \'scheduled block\' numbers</string>
    <string name="clear_all_outgoing_block_schedule_summary">Unblock all \'scheduled block\' numbers</string>
    <string name="title_activity_preference">Settings</string>
    <string name="settings_string">Settings</string>
    <string name="notification_settings_title">Notification settings</string>
    <string name="notification_settings_summary">Enable/Disable call block notifications</string>
    <string name="disable_incoming_block_notification">Disable incoming block notification</string>
    <string name="disable_incoming_block_notification_summary">Disables notification from showing up when incoming call is intercepted</string>
    <string name="disable_outgoing_block_notification_summary">Disables notification from showing up when outgoing call is intercepted</string>
    <string name="disable_outgoing_block_notification">Disable outgoing block notification</string>
    <string name="title_activity_preference_dialog">PreferenceDialogActivity</string>
    <string name="title_activity_preference_dialog_option">PreferenceDialogOptionActivity</string>
    <string name="clear_all_incoming">Clear incoming block</string>
    <string name="clear_all_scheduled_incoming">Clear scheduled incoming block</string>
    <string name="clear_all_all_time_incoming_blocked_number_question">Unblock all \'always block\' numbers?</string>
    <string name="clear_all_scheduled_incoming_blocked_number_question">Unblock all scheduled block numbers?</string>
    <string name="clear_all_outgoing">Clear outgoing block</string>
    <string name="clear_all_scheduled_outgoing">Clear scheduled outgoing block</string>
    <string name="clear_all_all_time_outgoing_blocked_number_question">Unblock all \'always block\' numbers?</string>
    <string name="clear_all_scheduled_outgoing_blocked_number_question">Unblock all scheduled block numbers?</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Unblock</string>
    <string name="clearValue">clearValue</string>
    <string name="confirm_disable_incoming_call_notification">Are you sure? You may not know when an incoming call is blocked. </string>
    <string name="confirm_disable_incoming_call_notification_title">Disable notification</string>
    <string name="confirm_disable_outgoing_call_notification">Are you sure? You may not know when an outgoing call is blocked. </string>
    <string name="confirm_disable_outgoing_call_notification_title">Disable notification</string>
    <string name="confirm_block_all_incoming_calls">Are you sure you want to block all incoming calls?</string>
    <string name="confirm_block_all_incoming_calls_title">Block all incoming calls</string>
    <string name="confirm_block_all_incoming_calls_except_whitelist">Are you sure you want to block all non-whitelist incoming calls?</string>
    <string name="confirm_block_all_incoming_calls_except_whitelist_title">Block non-whitelist incoming calls</string>
    <string name="confirm_block_all_outgoing_calls">Are you sure you want to block all outgoing calls?</string>
    <string name="confirm_block_all_outgoing_calls_title">Block all outgoing calls</string>
    <string name="confirm_block_all_outgoing_calls_except_whitelist">Are you sure you want to block all non-whitelist outgoing calls?</string>
    <string name="confirm_block_all_outgoing_calls_except_whitelist_title">Block non-whitelist outgoing calls</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="disable_incoming_block_notification_pref_key">disable_incoming_block_notification_pref_key</string>
    <string name="disable_outgoing_block_notification_pref_key">disable_outgoing_block_notification_pref_key</string>
    <string name="block_all_incoming_numbers_pref_key">block_all_incoming_numbers_pref_key</string>
    <string name="block_all_outgoing_numbers_pref_key">block_all_outgoing_numbers_pref_key</string>
    <string name="incoming_whitelist_pref_key">incoming_whitelist_pref_key</string>
    <string name="outgoing_whitelist_pref_key">outgoing_whitelist_pref_key</string>
    <string name="enable_vibration_pref_key">enable_vibration_pref_key</string>
    <string name="about_the_app_pref_key">about_the_app_pref_key</string>
    <string name="title_activity_single_contact_log">Single contact log</string>
    <string name="all_incoming_calls_are_blocked">All incoming calls are blocked</string>
    <string name="all_outgoing_calls_are_blocked">All outgoing calls are blocked</string>
    <string name="all_non_whitelist_incoming_calls_are_blocked">All non-whitelist incoming calls are blocked</string>
    <string name="all_non_whitelist_outgoing_calls_are_blocked">All non-whitelist outgoing calls are blocked</string>
    <string name="all_incoming_block_notification_blocked">Incoming block notification disabled</string>
    <string name="all_outgoing_block_notification_blocked">Outgoing block notification disabled</string>
    <string name="vibration_category_title_string">Vibration setting</string>
    <string name="vibration_category_summary_string">Vibration setting</string>
    <string name="vibrate_when_incoming_call_is_blocked_string">Vibrate on blocked incoming call</string>
    <string name="vibrate_when_incoming_call_is_blocked_string_summary">Enable vibration when an incoming call is blocked</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="empty_contact_log">No log for this contact</string>
    <string name="empty_log_list_text">NO LOGS AVAILABLE</string>
    <string name="empty_block_list_text">NO BLOCKED CONTACTS</string>
    <string name="empty_white_list_text">NO WHITELISTED CONTACTS</string>
    <string name="search_title">search blocked contact</string>
    <string name="about_the_app_app_name">Scheduled Call Blocker</string>
    <string name="app_version_text">Version 1.0</string>
    <string name="app_maker_label">By Bereket Tesfamichael</string>
    <string name="app_maker_email">neheworld@gmail.com</string>
    <string name="about_us_title">About</string>
    <string name="aboutus_category_title_string">About the app</string>
    <string name="aboutus_category_summary_string">About the app</string>
    <string name="about_the_app_preference_title">About Scheduled Call Blocker</string>
    <string name="about_the_app_preference_summary">About Scheduled Call Blocker</string>
    <string name="block_all_incoming_except_whitelist_string">Allow whitelisted numbers</string>
    <string name="block_all_outgoing_except_whitelist_string">Allow whitelisted numbers</string>
    <string name="block_all_incoming_except_whitelist_string_summary">receive calls from whitelisted numbers</string>
    <string name="block_all_outgoing_except_whitelist_string_summary">make calls to whitelisted numbers</string>
</resources>